[gd_scene load_steps=3 format=3 uid="uid://dfcmbf1vg4ynr"]

[ext_resource type="Script" uid="uid://bngpa1m5ywdmv" path="res://spill_meny.gd" id="1_nbho3"]
[ext_resource type="Texture2D" uid="uid://dg3uids1b4l32" path="res://pixeles-creative-background-free-vector.webp" id="2_t3xlx"]

[node name="spill_meny" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -11.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(11110, 0)
script = ExtResource("1_nbho3")

[node name="hoved_container" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -221.0
offset_right = 293.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2

[node name="start_btn" type="Button" parent="hoved_container"]
layout_mode = 2
tooltip_text = "Starter spillet"
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "Start"

[node name="settings_btn" type="Button" parent="hoved_container"]
layout_mode = 2
tooltip_text = "Ã…pner innstillinger"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 100
text = "Innstillinger
"

[node name="quit_btn" type="Button" parent="hoved_container"]
layout_mode = 2
tooltip_text = "Slutter spillet"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 100
text = "Slutt"

[node name="debounce_start_btn" type="Timer" parent="hoved_container"]
wait_time = 0.3
one_shot = true

[node name="debounce_settings_btn" type="Timer" parent="hoved_container"]
wait_time = 0.3
one_shot = true

[node name="debounce_quit_btn" type="Timer" parent="hoved_container"]
wait_time = 0.3
one_shot = true

[node name="settings_container" type="VBoxContainer" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -221.5
offset_right = 292.5
offset_bottom = 221.5
grow_horizontal = 2
grow_vertical = 2

[node name="animations_btn" type="CheckButton" parent="settings_container"]
layout_mode = 2
tooltip_text = "Toggle animasjoner"
text = "Disable animations"

[node name="shadows_btn" type="CheckButton" parent="settings_container"]
layout_mode = 2
tooltip_text = "Toggle shadows"
text = "Shadows"

[node name="close_btn" type="Button" parent="settings_container"]
layout_mode = 2
tooltip_text = "Lukker innstillingene"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 100
text = "Lukk"

[node name="debounce_animations_btn" type="Timer" parent="settings_container"]
wait_time = 0.3
one_shot = true

[node name="debounce_shadows_btn" type="Timer" parent="settings_container"]
wait_time = 0.3
one_shot = true

[node name="debounce_close_btn" type="Timer" parent="settings_container"]
wait_time = 0.3
one_shot = true

[node name="esc_container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -20.0
offset_right = 35.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="esc_container"]
layout_mode = 2
tooltip_text = "Fortsetter spillet"
text = "Fortsett"

[node name="debounce_esc" type="Timer" parent="esc_container"]
wait_time = 0.5
one_shot = true

[node name="debounce_resume_btn" type="Timer" parent="esc_container"]
wait_time = 0.5
one_shot = true

[node name="bakgrunn_bilde" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = 15.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_behavior_recursive = 1
texture = ExtResource("2_t3xlx")

[node name="tittel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 17.0
offset_top = 11.0
offset_right = 17.0
offset_bottom = 34.0
grow_horizontal = 2
tooltip_text = "Game title"
mouse_filter = 0
text = "Mighty Knight"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="death_screen_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="hoved_container/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="hoved_container/settings_btn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="hoved_container/quit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="timeout" from="hoved_container/debounce_start_btn" to="." method="_on_debounce_start_btn_timeout"]
[connection signal="timeout" from="hoved_container/debounce_settings_btn" to="." method="_on_debounce_settings_btn_timeout"]
[connection signal="timeout" from="hoved_container/debounce_quit_btn" to="." method="_on_debounce_quit_btn_timeout"]
[connection signal="toggled" from="settings_container/animations_btn" to="." method="_on_animations_btn_toggled"]
[connection signal="toggled" from="settings_container/shadows_btn" to="." method="_on_shadows_btn_toggled"]
[connection signal="pressed" from="settings_container/close_btn" to="." method="_on_close_btn_pressed"]
[connection signal="timeout" from="settings_container/debounce_animations_btn" to="." method="_on_debounce_animations_btn_timeout"]
[connection signal="timeout" from="settings_container/debounce_shadows_btn" to="." method="_on_debounce_shadows_btn_timeout"]
[connection signal="timeout" from="settings_container/debounce_close_btn" to="." method="_on_debounce_close_btn_timeout"]
[connection signal="pressed" from="esc_container/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="timeout" from="esc_container/debounce_esc" to="." method="_on_debounce_esc_timeout"]
[connection signal="timeout" from="esc_container/debounce_resume_btn" to="." method="_on_debounce_resume_btn_timeout"]
